[gd_scene load_steps=21 format=1]

[ext_resource path="res://script/guitar_dude_main.gd" type="Script" id=1]
[ext_resource path="res://sprite/character/player/guitar_dude/idle_0.png" type="Texture" id=2]
[ext_resource path="res://sprite/character/player/guitar_dude/idle_1.png" type="Texture" id=3]
[ext_resource path="res://sprite/character/player/guitar_dude/hit_0.png" type="Texture" id=4]
[ext_resource path="res://sprite/character/player/guitar_dude/hit_1.png" type="Texture" id=5]
[ext_resource path="res://sprite/character/player/guitar_dude/walk_0.png" type="Texture" id=6]
[ext_resource path="res://sprite/character/player/guitar_dude/walk_1.png" type="Texture" id=7]
[ext_resource path="res://sprite/character/player/guitar_dude/walk_2.png" type="Texture" id=8]
[ext_resource path="res://sprite/character/player/guitar_dude/walk_3.png" type="Texture" id=9]
[ext_resource path="res://sprite/character/player/guitar_dude/punch_0.png" type="Texture" id=10]
[ext_resource path="res://sprite/character/player/guitar_dude/punch_1.png" type="Texture" id=11]
[ext_resource path="res://sprite/character/player/guitar_dude/special_0.png" type="Texture" id=12]
[ext_resource path="res://sprite/character/player/guitar_dude/special_1.png" type="Texture" id=13]
[ext_resource path="res://sprite/character/player/guitar_dude/dead_0.png" type="Texture" id=14]
[ext_resource path="res://sprite/character/player/guitar_dude/dead_1.png" type="Texture" id=15]
[ext_resource path="res://sprite/character/player/guitar_dude/dead_2.png" type="Texture" id=16]
[ext_resource path="res://audio/character/player/guitardude/guitar_dude_dead.smp" type="Sample" id=17]

[sub_resource type="RectangleShape2D" id=1]

resource/name = "guitar_dude_collision_shape"
custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="SpriteFrames" id=2]

resource/name = "guitar_dude_sprite_library"
animations = [ { "frames":[ ExtResource( 2 ), ExtResource( 3 ) ], "loop":true, "name":"idle", "speed":3.0 }, { "frames":[ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 2 ) ], "loop":false, "name":"hit", "speed":2.0 }, { "frames":[ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ], "loop":true, "name":"walk", "speed":3.0 }, { "frames":[ ExtResource( 10 ), ExtResource( 11 ) ], "loop":false, "name":"punch", "speed":2.0 }, { "frames":[ ExtResource( 12 ), ExtResource( 13 ) ], "loop":true, "name":"special", "speed":2.0 }, { "frames":[ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ], "loop":false, "name":"dead", "speed":3.0 } ]

[sub_resource type="SampleLibrary" id=3]

resource/name = "guitar_dude_sample_library"
samples/dead = { "db":0.0, "pitch":1.0, "sample":ExtResource( 17 ) }

[node name="guitar_dude" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 2, 0, 0, 3, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
health = 100
stamina = 100

[node name="guitar_dude_sprite" type="AnimatedSprite" parent="."]

frames = SubResource( 2 )
animation = "hit"
frame = 2
playing = true

[node name="guitar_dude_audio" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 3 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="guitar_dude_collision" type="CollisionShape2D" parent="."]

transform/scale = Vector2( 2, 3 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0


